# atd-anta-demo

./: .gitignore  .python-version  LICENSE  README.md  anta.env  collections.yml  pyproject.toml  requirements.txt
anta_custom/: dummy.py
anta_custom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
atd-inventory/: ansible.cfg
atd-inventory/config_backup/: leaf1_post_running-config.conf  leaf2_post_running-config.conf  leaf3_post_running-config.conf  leaf4_post_running-config.conf  spine1_post_running-config.conf  spine2_post_running-config.conf
atd-inventory/documentation/devices/: leaf1.md  leaf2.md  leaf3.md  leaf4.md  spine1.md  spine2.md
atd-inventory/group_vars/: ATD_FABRIC.yml  ATD_LAB.yml  ATD_SERVERS.yml
atd-inventory/intended/configs/: leaf1.cfg  leaf2.cfg  leaf3.cfg  leaf4.cfg  spine1.cfg  spine2.cfg
atd-inventory/intended/structured_configs/: leaf1.yml  leaf2.yml  leaf3.yml  leaf4.yml  spine1.yml  spine2.yml
atd-inventory/intended/structured_configs/cvp/: cv_atd1_configlets.yml
atd-inventory/playbooks/: config-build.yml
containerlab-topology/: topology.yml
docs/: avd-provisioning.md  demo-base.md  demo-tests.md  demo.md  installation.md
network-tests/: inventory.yml  nrfu.yml  nrfu_custom.yml  snapshot.yml
